@@ -1,6 +1,8 @@
 Not yet released (Build 2284)
 
-- adapted a few SPARQLParser tests with non-absolute IRI expansions; are now called with "postCheck=False" to avoid irrelevant assertion failures
+- SPARQLParser: fixed prefix expansion where prefix equal to ":"
+- SPARQLParser: changed default value of parameter "base" for parseQuery() from "''" to "None"; adapted func_unittest.py accordingly
+- adapted a few SPARQLParser tests with non-absolute IRI expansions: these are now called with "postParseCheck=False" to avoid irrelevant assertion failures
 - Moved prefix checking in module sparqlparser from method _checkIriExpansion() to _applyPrefixesAndBase()
 - Fixed a problem with base IRI processing (SPARQLParser). In the process:
 	- removed parameter "isdefaultbase" from _applyPrefixesAndBase()
